fixed row top padding on mobile devices

--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -444,7 +444,7 @@ input {
 
 	.row {
 		&:first-of-type {
-			padding-top: 55px;
+			padding-top: 80px;
 		}
 	}
 	.row-noMobPadding:first-of-type {
